# glac-ci

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build_python.yaml  test_and_build.yaml
app/: main.py
helm-charts/: index.yaml  ipto-cron-helm-0.1.0.tgz
