[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ci-demo"
version = "0.1.0"
description = ""
authors = ["Dimitris Brodimas <d.brodimas@admie.gr>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.9.2"
numpy = "2.1.1"
pandas = "2.2.3"
scikit-learn = "1.5.2"
seaborn = "0.13.2"
